# On-Device-LLM-

./: .gitignore
.github/: copilot-instructions.md
On-Device LLM/: CMakeLists.txt  README.md
On-Device LLM/src/hal/backends/: cpu_backend.h
On-Device LLM/src/hardware/: hardware_detector.cpp
On-Device LLM/src/launcher/: http_service.cpp  runtime_service.cpp
On-Device LLM/src/memory/: memory_manager.cpp
On-Device LLM/src/modules/: module_system.h
On-Device LLM/tests/: test_hardware_detection.cpp
On-Device LLM/tools/model_export/: export.py
On-Device LLM/tools/quantization/: quantize.py
config/: default_config.json
src/core/: runtime.cpp  runtime.h
src/hal/: backend.cpp  backend.h
src/hal/backends/: cpu_backend.cpp
src/hardware/: hardware_detector.h
src/memory/: memory_manager.h
src/privacy/: privacy_manager.h
src/scheduler/: adaptive_scheduler.h
tests/: test_memory_manager.cpp
